--- a/release-notes.mdx
+++ b/release-notes.mdx
@@ -39,7 +39,7 @@ Convenience improvement for secrets management:
 
 ### May 29, 2024
 
-#### 📚 Playbooks Library
+#### <Icon icon="books" iconType="solid" /> Playbooks Library
 
 You can now easily create, view and use playbooks by going to the **Devin app > Library > Playbooks.** You’ll be able to create playbooks for your personal use cases, and explore playbooks from the community. Any playbooks you create will be shared with your team.
 
@@ -53,7 +53,7 @@ You can click in any of your Team or Community Playbooks to see example runs as 
     ![Devin](/images/rn_playbooks2.png)
 </Frame>
 
-#### 🖊️ Playbook Compiler
+#### <Icon icon="gear-complex-code" iconType="solid" /> Playbook Compiler
 
 With the playbook compiler, you can now quickly iterate on your playbook to make sure the format, structure and content are optimized for the best playbook session results. 
 
@@ -66,7 +66,7 @@ With the playbook compiler, you can now quickly iterate on your playbook to make
     ![Devin](/images/rn_playbooks3.png)
 </Frame>
 
-#### 🌐 Interactive Browser
+#### <Icon icon="globe" iconType="solid" /> Interactive Browser
 
 Interactive Browser allows users to directly use Devin’s browser. This feature is especially helpful for browser tasks where Devin may require assistance, such as completing CAPTCHAs, multifactor authentication steps and more. 
 
@@ -74,7 +74,7 @@ Interactive Browser allows users to directly use Devin’s browser. This feature
     ![Devin](/images/rn_interactivebrowser.png)
 </Frame>
 
-#### 🧠 Knowledge
+#### <Icon icon="brain" iconType="solid" /> Knowledge
 
 Knowledge is a collection of tips, instructions, and organizational context for Devin. You can continually add to Devin’s bank of knowledge over time, and Devin will automatically recall relevant knowledge as necessary.
 
@@ -89,21 +89,19 @@ View when and how Devin is using Knowledge in any run’s progress updates.
     ![Devin](/images/rn_knowledge2.png)
 </Frame>
 
-#### 👁️‍🗨️ View Code Updates
+#### <Icon icon="code" iconType="solid" /> View Code Updates
 
 During a session, you can now click into Devin’s progress updates to view specific code edits Devin made while working through the sub-tasks. You can also view these directly from the Editor.
 
+Progress Updates View
 <Frame>
     ![Devin](/images/rn_codeupdates1.png)
 </Frame>
 
-Progress Updates View
-
+Editor Updates View
 <Frame>
     ![Devin](/images/rn_codeupdates2.png)
 </Frame>
-
-Editor Updates View
 
 Code updates will open a modal where you can track new code written by Devin up to that specific point in time in the session. 
 
@@ -111,7 +109,7 @@ Code updates will open a modal where you can track new code written by Devin up 
     ![Devin](/images/rn_codeupdates3.png)
 </Frame>
 
-#### 💻 View Shell Updates
+#### <Icon icon="terminal" iconType="solid" /> View Shell Updates
 
 During a session, you can now click into Devin’s progress updates to view specific shell commands Devin used while working through the sub-tasks. You can also view the Command History from the Shell.
 
@@ -120,12 +118,11 @@ During a session, you can now click into Devin’s progress updates to view spec
 </Frame>
 
 Progress View Shell Updates
-
 <Frame>
     ![Devin](/images/rn_shellupdates2.png)
 </Frame>
 
-#### 💻 Shell Command History
+#### <Icon icon="rectangle-history" iconType="solid" /> Shell Command History
 
 Shell updates will show you the full Command History and related outputs. You can easily copy a command and output by clicking on the three-dots icon. 
 
@@ -137,7 +134,7 @@ Any commands that are italicized are commands run at a future point in time in t
 
 ### May 13, 2024
 
-#### 📸 Machine Snapshot Startup Commands
+#### <Icon icon="camera" iconType="solid" /> Machine Snapshot Startup Commands
 
 For a given machine snapshot, you can now **set a list of startup commands that will be run at the beginning of every run**. Some details:
 
@@ -151,7 +148,7 @@ For a given machine snapshot, you can now **set a list of startup commands that 
 
 Learn more about Machine Snapshots here: [Machine Snapshots Guide](/Onboard_Devin/snapshots) 
 
-#### 🗒️ Command History
+#### <Icon icon="rectangle-history" iconType="solid" /> Command History
 
 <Frame>
     ![Devin](/images/rn_command_history1.png)
@@ -167,7 +164,7 @@ With command history, you can easily see a list of all the commands that Devin r
     ![Devin](/images/rn_command_history2.png)
 </Frame>
 
-#### 🔆 Keep Alive
+#### <Icon icon="sun-bright" iconType="solid" /> Keep Alive
 
 Keep Alive will keep a session alive indefinitely, and will count against Technical Preview users’ daily quota.  Manually terminating a session will override Keep Alive.
 
@@ -177,7 +174,7 @@ Note that Keep Alive is useful for keeping any hosted services (devinapps.com li
     ![Devin](/images/rn_keepalive1.png)
 </Frame>
 
-#### 🚨 Browser Notifications
+#### <Icon icon="bell" iconType="solid" /> Browser Notifications
 
 <Frame>
     ![Devin](/images/rn_notifs.png)
@@ -185,14 +182,14 @@ Note that Keep Alive is useful for keeping any hosted services (devinapps.com li
 
 Get notified when Devin sends you a message. You can find this under Settings > Profile.
 
-#### ⏸️  Pause Devin
+#### <Icon icon="pause" iconType="solid" /> Pause Devin
 The new pause button is a shortcut and alternative to telling Devin to pause.
 
 <Frame>
     ![Devin](/images/rn_pause.png)
 </Frame>
 
-#### 👩‍💻 Open VS Code: Access Devin’s machine
+#### <Icon icon="computer" iconType="solid" /> Open VS Code: Access Devin’s machine
 
 Open VS Code lets you read and edit files on Devin’s machine just like if you were working with Devin in VSCode. You can also open up a terminal in Devin’s machine, which means you have **full access** to Devin’s machine.
 
@@ -205,7 +202,7 @@ Combine VSCode with our [Machine Snapshots feature](/Onboard_Devin/snapshots) to
 
 Learn more here: [Interacting with Devin’s Machine](/Collaborate_with_Devin/machine)
 
-#### 🔑 Cookies + Persisted Secrets
+#### <Icon icon="cookies" iconType="solid" /> Cookies + Persisted Secrets
 
 With Persisted Secrets, any secrets that you add in the Settings page will be usable by Devin in all future Devin sessions.
 
@@ -216,7 +213,7 @@ Additionally, with site cookies, Devin will find that it's already logged in to 
 
 Learn more here: [Persisted Secrets + Site Cookies](/Onboard_Devin/secrets)
 
-#### 🔒 [Organizations] Unlist Sessions
+#### <Icon icon="lock" iconType="solid" /> [Organizations] Unlist Sessions
 
 > This feature is only available to Organizations, not Technical Preview or Personal accounts
 > 
@@ -227,7 +224,7 @@ My default, all new sessions are visible to your Team (aka Organization). To mak
     ![Devin](/images/rn_rename.png)
 </Frame>
 
-#### 💬 [Organizations] Slack Integration
+#### <Icon icon="slack" iconType="solid" />  [Organizations] Slack Integration
 
 > This feature is only available to Organizations, not Technical Preview or Personal accounts
 > 
