--- a/release-notes.mdx
+++ b/release-notes.mdx
@@ -5,8 +5,6 @@ icon: 'megaphone'
 
 ### July 15, 2024
 
-### June 30, 2024
-
 <Accordion title="Universal Planner">
   With Universal Planner, Devin can now more reliably perform long, multi-step tasks that require **looping** — in other words, tasks that require performing the same action multiple times — without needing to use Playbooks. 
 
@@ -36,7 +34,166 @@ Convenience improvement for secrets management:
 
 </Accordion>
 
+## 🧹 General UI Improvements
 
+We’ve done some cleanup to our **mobile UI, settings page, and session controls.**
+
+<columns>
+![Screenshot 2024-07-19 at 5.09.26 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/cfaccd40-3152-4906-8f88-8de21768437f/ed476c97-b909-49cb-a890-c33638582077.png)
+![Screenshot 2024-07-19 at 5.08.34 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/efec392e-0785-41de-8599-fa77898e1b83/Screenshot_2024-07-19_at_5.08.34_PM.png)
+</columns>
+
+## 🏃‍♂️ Devin is now faster!
+
+You’ll notice that Devin has a faster time to the first message, and is quicker at completing some actions. Expect more improvements in the coming days!
+
+##### 📓 Devin’s Work Log
+
+Devin now maintains a work log in its planner. More quickly grok what Devin’s accomplished with the work log! 
+
+Open the accordions to read Devin’s retro of its work at each step.  🟢/ 🟠 / 🔴 correspond to A/B/C grades. You’ll also find timestamps and how long Devin spent at each step.
+
+[Screen Recording 2024-07-12 at 4.34.03 PM.mov](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/a40fc0ec-9998-46d1-9ccd-1dd4f936e8e0/Screen_Recording_2024-07-12_at_4.34.03_PM.mov)
+
+## 📱 Devin Mobile Improvements
+
+Try Devin while on the go - Devin mobile is now more usable, although we have a couple other improvements in the works!
+
+![Screenshot 2024-06-27 at 3.56.30 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/3aec6f04-10f2-4792-bee4-49b345583364/Screenshot_2024-06-27_at_3.56.30_PM.png)
+
+![Screenshot 2024-06-27 at 3.56.26 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/450be8ba-9230-4010-8901-c3f84547aae0/Screenshot_2024-06-27_at_3.56.26_PM.png)
+
+## 💬  Major Improvements to our Slack Integration
+
+<aside>
+💡 To see these changes, (1) an organization admin needs to reinstall Slack, and (2) individuals need to connect their Slack user at [preview.devin.ai/settings/integrations](https://preview.devin.ai/settings/integrations). You may also need to (3) re-add Devin to Slack channels.
+
+</aside>
+
+**Create sessions directly from Slack, attach Playbooks and Snapshots using Slack’s convenient modal interface!** 
+
+Look for the **“Create a new session”** option in the message menu (you may need to click **“More message shortcuts”** the first time you try this) 
+
+![Screenshot 2024-07-12 at 3.50.03 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/dff29b36-15a8-4b2e-82b9-efd98b2ab429/Screenshot_2024-07-12_at_3.50.03_PM.png)
+
+![Screenshot 2024-07-12 at 3.49.41 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/f33b094a-1285-43c3-9f44-d08f81749787/Screenshot_2024-07-12_at_3.49.41_PM.png)
+
+Also try the **/devin shortcut** or open Slack’s shortcut launcher 
+
+![Screenshot 2024-07-12 at 3.52.39 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/0eac4a79-838d-4940-8710-2d385f14ea30/Screenshot_2024-07-12_at_3.52.39_PM.png)
+
+**Use “send to channel” to mirror sessions started via the web app on Slack**
+
+This enables anyone in the channel (with Devin access) to quickly follow along and collaborate with Devin! 
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/b50db0d7-9d68-4423-b0c4-0e07144d0285/Untitled.png)
+
+**Seamless communication across Slack channels and web app**
+
+Messages sent via the web app are now mirrored in Slack threads and vice versa *(applies to sessions started via webapp and “[sent to channel](https://www.notion.so/f3b2c9375d7743799006b289e7baa652?pvs=21)” as well as sessions started via Slack channel)*
+
+![Screenshot 2024-07-12 at 4.05.27 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/07ccfcf3-a6fa-44b7-87f5-5acda797ec6b/6468d9f7-9e3d-4e7b-aa0d-caa64ee9d619.png)
+
+![Screenshot 2024-07-12 at 4.06.05 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/dd9de81e-aa45-4568-b9d1-0a002d9ff269/Screenshot_2024-07-12_at_4.06.05_PM.png)
+
+**Turn on Slack notifications mid-session**
+
+Slack notifications are now more informative, containing message contents and session title.
+
+![Screenshot 2024-07-12 at 4.10.58 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/77fb62af-5247-4432-94fe-ef46b0919c4e/Screenshot_2024-07-12_at_4.10.58_PM.png)
+
+![Screenshot 2024-07-12 at 4.11.53 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/2d8253b0-2e2f-47ef-b002-77ca6d95119a/Screenshot_2024-07-12_at_4.11.53_PM.png)
+
+### June 30, 2024
+
+## 💻 **Use Devin’s Editor and Shell**
+
+It can sometimes be more convenient to directly take actions for Devin, rather than providing instructions for Devin to follow.
+
+We’re excited to share that you can now directly use Devin’s machine**.** The new “Use Devin’s Machine” button in the web interface opens VSCode in a new tab. Using VSCode, ****you can directly read and edit Devin’s files, as well as open up a terminal in Devin’s machine.
+
+![v2_vscode.gif](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/e714c2cc-f5d0-46dd-8805-a0f4e7319b25/v2_vscode.gif)
+
+## ⏱️ Rollback: Restore live sessions to a previous state
+
+Rewind Devin’s memory and file system to any past moment in time and resume - useful for undoing wrong decisions, exploring alternative solutions, quickly iterating on playbooks/prompts, etc.
+
+![Screenshot 2024-06-27 at 3.52.52 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/caba1de4-7c79-4f82-a751-16d6ed1a0b1d/Screenshot_2024-06-27_at_3.52.52_PM.png)
+
+Restoring a checkpoint returns Devin to a previous point in time — Devin’s files and memory will be rolled back. **This is particularly useful…**
+
+- **When Devin made good progress, but then makes a mistake —** it can often be faster to revert Devin’s changes and let Devin retry with hints (or take over and complete the task yourself by [**using Devin’s machine**](https://www.cognition.ai/blog/june-24-product-update#use-devins-browser-editor-and-shell)), rather than working on top of Devin’s mistakes
+- **When iterating on a playbook or prompt —** try editing a playbook, and rolling back afterwards to quickly test whether the edit enables Devin to succeed reliably
+
+![Screenshot 2024-07-12 at 6.17.30 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/96766269-034e-420b-b687-e8ba9ce5c480/4efcdf17-8481-469f-96eb-e4a5f56eb32b.png)
+
+## 📝 Edit playbook steps during live runs
+
+You can now edit playbooks while you’re running a session! If Devin isn’t responding to the playbook instructions as desired, you can rollback to a previous state in the session, edit the step in the playbook you want to make clearer for Devin, and retry the individual step, instead of rerunning the whole playbook in a new session.
+
+This will allow you to test and iterate to make the playbook more reliable, much faster!
+
+![Screenshot 2024-06-27 at 3.51.34 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/020bd793-3802-42a2-9e2b-8915ea94e9bf/Screenshot_2024-06-27_at_3.51.34_PM.png)
+
+## ✍️ Quickly edit a playbook before sending it to Devin
+
+Selected playbooks show up inside of the input box and the input box can be expanded, enabling fast and convenient edits to a Playbook before sending it to Devin.
+
+[playbook_editing_improvements.mp4](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/3a7bd226-bad3-4392-be95-14f93d52ebd1/playbook_editing_improvements.mp4)
+
+Inline and in-session playbook edits won’t be reflected in the Playbook Library unless you click the **“Update Playbook in library”** button. Alternatively, save your edits as new Playbook with the **“Create new Playbook in library”** button.
+
+![Screenshot 2024-07-05 at 12.59.16 AM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/6ab411f6-e1c3-4b22-80b7-728a803c3211/6cbbbe8c-5dc9-4fb1-b8a5-6249d68816f8.png)
+
+## 👂 Forbidden Actions Reliability Improvements
+
+Devin now abides by forbidden actions more reliably when it’s told what not to do via user messages or Playbooks.
+
+```jsx
+## Forbidden Actions
+- Do NOT touch any Kotlin code
+- Do NOT push directly to the main branch.
+- Do NOT work on the main branch
+- Do NOT commit changes to the yarn.lock or package-lock.json files unless asked to explicitly.
+```
+
+## 📚 Explore how your teammates are using Playbooks in the new “Past runs” tab, and directly select Playbooks from library
+
+[Screen Recording 2024-07-12 at 4.44.23 PM.mov](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/ecbbf6c9-f99e-4635-8c60-6117d6ddd3b7/Screen_Recording_2024-07-12_at_4.44.23_PM.mov)
+
+## 💬 Ask Devin about Devin
+
+Devin is now aware of its own product features and improvements! Try asking Devin what it knows about the Devin web app, and it’ll explain its features and where to find them.
+
+![Screenshot 2024-07-04 at 11.06.33 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/b90c1513-1161-4ca5-bc78-0c0c4164b336/Screenshot_2024-07-04_at_11.06.33_PM.png)
+
+## 🏃‍♂️ **Start Duplicate Sessions**
+
+Quickly kick off 2+ similar sessions with the new **“Start duplicate session”** button in the sidebar. You’ll be redirected to the Devin home page with your  initial message pre-populated along with any attachments, playbooks, and snapshots. 
+
+We recommend kicking off 2+ Devin sessions for some tasks, to give Devin more chances to succeed!
+
+![Screenshot 2024-07-04 at 10.46.58 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/5f755d23-2ab1-4a66-9a3d-7cc7a0b78341/Screenshot_2024-07-04_at_10.46.58_PM.png)
+
+## ✨ Home Screen Upgrades & Shortcuts
+
+The new Devin home screen makes it faster to explore and select Playbooks and Snapshots. We also introduced **Shortcuts.** Select a snapshot and/or playbook and save them as a shortcut so that they’re quick to reuse!
+
+![Screenshot 2024-06-27 at 3.37.43 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/b2e84b47-921b-4ad1-9721-2b7f7dfba0c8/Screenshot_2024-06-27_at_3.37.43_PM.png)
+
+![Screenshot 2024-06-27 at 3.36.57 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/96289289-e8e4-4a3f-9b5e-0a416002d36f/Screenshot_2024-06-27_at_3.36.57_PM.png)
+
+## 📈 PR Metrics Dashboard
+
+The PR metrics view aggregates all PRs made by Devin. The PR metrics view is available at https://preview.devin.ai/metrics!
+
+![Screenshot 2024-07-04 at 10.30.08 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/53c7581c-b984-43e2-b157-94463b0f3d07/Screenshot_2024-07-04_at_10.30.08_PM.png)
+
+## 🔎 Session Filtering
+
+Quickly filter all of your sessions by creator, status, playbook, date, etc.
+
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/526b03e0-3f6e-4a93-914a-0ce1d0631270/Untitled.png)
 ### May 29, 2024
 
 #### <Icon icon="books" iconType="solid" /> Playbooks Library
