--- a/Learn_about_Devin/prompting.mdx
+++ b/Learn_about_Devin/prompting.mdx
@@ -6,36 +6,60 @@ icon: 'comment'
 
 Devin needs guidance to make sure it knows what tasks to execute, and more importantly, any preference in how it should execute those tasks. If not specified, Devin will make its own judgment calls. 
 
-Here are some of our recommended guidelines on how to most successfully prompt Devin:
+#### Prompt Library
 
-### Be specific
+<AccordionGroup>
+  <Accordion title="Clone and set up repo">
+  Clone the repository from https://github.com/onblog/SnowJena, specifically the snowjena-ticket-server application, and set it up locally. First, ensure the snowjena-ticket-server application builds and runs successfully with the current setup. You don’t need to worry about other applications in the repository. Next, upgrade the Spring Boot version to 3.3.2 in the snowjena-ticket-server application, making only the necessary changes related to this version upgrade. After the upgrade, test the snowjena-ticket-server application to confirm it still builds and runs correctly. You don't need to push code into a repository. Instead, share a zipped folder. Do share screenshot of application running successfully post upgrade in the browser as well.
+  </Accordion>
 
-Provide clear, detailed instructions or requirements for Devin to follow when executing a given task. Some potential tactics:
+  <Accordion title="Build a personal website">
+Create a one-page personal website for an online for {person} with the following features and sections:
 
-- Keep sentences short
-- Specific the steps to complete a task
-- Use imperative verbs
-- Use bullets and/or sub-bullets
-- Name specific repos, libraries, or branches you want Devin to work with, or equally as important, not work with!
+1. A fixed navigation bar with links to the sections (About Me, My Work, Publications, Education)
+2. A hero section with an picture of the person
+3. An "About Me" section with an brief description of the person
+4. A "My Work" section with a timeline of work experiences and projects 
+5. An interactive "Publications" section with links to published articles or papers available online authored by {person} 
+6. An "Education" section with the schools {person} attended, degrees and graduating year
 
-Nothing is “too obvious” for Devin so more detail is better, but it will do its best to clarify and ask questions along the way.
+Include filler placeholder content where you can't find publicly available information. Make the website pretty.
+  </Accordion>
 
-### Split complex tasks into simpler sub-tasks, even sessions
+  <Accordion title="Build a personal website">
+Use this (https://github.com/muan/unicode-emoji-json) to write a function that converts a string like https://www.gstatic.com/android/keyboard/emojikitchen/20201001/u1f600/u1f600_u2615.png to "grinning_face_warm_beverage" by extracting the 2 emojis (u1f600, u2615) and converting them to actual emojis (use python for this) and then looking them up in the dictionary provided by the unicode emoji json library I linked. Throw an error if the emoji isn't found, including the codepoint in the error message. Then run the function on https://gist.githubusercontent.com/ryanseddon/0925ba915d4f865228ee3e6e0ddbe52c/raw/aa5cc2dbab3a9f3eaa1dc5d22dc1dc88d184dc4f/urls.txt and output a csv of the results.
+</AccordionGroup>
+
+
+#### Be clear and specific
+
+Provide clear, detailed instructions or requirements for Devin to follow when executing a given task. Nothing is “too obvious” for Devin, but it will do its best to clarify and ask questions along the way. Some potential tactics:
+
+1. Keep sentences short
+2. Specific the steps to complete a task
+3. Use imperative verbs
+4. Use bullets and/or sub-bullets
+5. Name specific repos, libraries, or branches you want Devin to work with, or equally as important, not work with!
+
+<Accordion>
+
+
+#### Split complex tasks into simpler sub-tasks, even sessions
 
 As with any entry-level engineer, Devin is more likely to struggle with complex, longer tasks. Break down a complex project or tasks into sub-tasks as much as possible. In fact, we recommend breaking down tasks into separate sessions entirely.
 
-### Use Playbooks
+#### Use Playbooks
 
-For multistep tasks where you see your prompt getting lengthy, we suggest using [Playbooks](https://www.notion.so/Guide-to-Devin-Playbooks-0cf0ee2fe8734f8daf67e4508523bf14?pvs=21).  Playbooks are like custom system prompts — they allow Devin to perform better and more reliably on longer tasks.
+For multistep tasks where you see your prompt getting lengthy, we suggest using [Playbooks](/Working_with_Teams/playbooks-intro).  Playbooks are like custom system prompts — they allow Devin to perform better and more reliably on longer tasks.
 
-### Provide references or examples
+#### Provide references or examples
 
 When available, link documentation, websites or example outputs that are helpful and relevant for the task.  If you don’t provide any resources, Devin will search for documentation to support it in the task independently, and may make discretionary decisions on which documentation to use or path to take if there are multiple options.
 
-### Ask for an ETA
+#### Ask for an ETA
 
 Check with Devin how long it will take it to complete a given tasks. It may not always be accurate, but it will help you understand if the task is too large, or when to come back and check in on the progress Devin is making.
 
-### Jump in!
+#### Jump in!
 
-The browser and editor allow you to interact with Devin’s machine and “take over” from Devin when necessary. We highly recommend playing with this feature to make real-time edits or help Devin navigate complicated browser steps like CAPTCHAs.
+Give Devin instructions while it's working, add more steps to Devin's plan. The browser and editor also allow you to interact with Devin’s machine and “take over” from Devin when necessary. 
