--- a/Learn_about_Devin/prompting.mdx
+++ b/Learn_about_Devin/prompting.mdx
@@ -36,6 +36,12 @@ Devin needs guidance to make sure it knows what tasks to execute, and more impor
     ```
   </Accordion>
 
+  <Accordion title="Write unit test">
+    ```
+    Can you get https://github.com/markedjs/marked set up, use the command line tool with the --output/-o flag, then add a unit test to test the --output flag? There should already be similar tests in bin.test.js that you can add to.
+    ```
+  </Accordion>
+
   <Accordion title="Visualize inflation adjusted prices">
     ```
     Hi Devin, please go to https://beta.data.gov.sg/ and visualize how the distribution of flat prices has been changing over time. Then report back with any interesting insights.
