--- a/Learn_about_Devin/prompting.mdx
+++ b/Learn_about_Devin/prompting.mdx
@@ -9,7 +9,7 @@ Devin needs guidance to make sure it knows what tasks to execute, and more impor
 #### Prompt Library
 
 <AccordionGroup>
-  <Accordion title="Clone and set up repo">
+  <Accordion title="Clone and set up repo" icon="slack">
     ```  
     Clone the repository from https://github.com/onblog/SnowJena, specifically the snowjena-ticket-server application, and set it up locally. First, ensure the snowjena-ticket-server application builds and runs successfully with the current setup. You don’t need to worry about other applications in the repository. Next, upgrade the Spring Boot version to 3.3.2 in the snowjena-ticket-server application, making only the necessary changes related to this version upgrade. After the upgrade, test the snowjena-ticket-server application to confirm it still builds and runs correctly. You don't need to push code into a repository. Instead, share a zipped folder. Do share screenshot of application running successfully post upgrade in the browser as well.
     ```
