--- a/Learn_about_Devin/prompting.mdx
+++ b/Learn_about_Devin/prompting.mdx
@@ -9,13 +9,13 @@ Devin needs guidance to make sure it knows what tasks to execute, and more impor
 #### Prompt Library
 
 <AccordionGroup>
-  <Accordion title="Clone and set up repo" icon="slack">
+  <Accordion title="Clone and set up repo" icon="copy">
     ```  
     Clone the repository from https://github.com/onblog/SnowJena, specifically the snowjena-ticket-server application, and set it up locally. First, ensure the snowjena-ticket-server application builds and runs successfully with the current setup. You don’t need to worry about other applications in the repository. Next, upgrade the Spring Boot version to 3.3.2 in the snowjena-ticket-server application, making only the necessary changes related to this version upgrade. After the upgrade, test the snowjena-ticket-server application to confirm it still builds and runs correctly. You don't need to push code into a repository. Instead, share a zipped folder. Do share screenshot of application running successfully post upgrade in the browser as well.
     ```
   </Accordion>
 
-  <Accordion title="Build a personal website">
+  <Accordion title="Build a personal website" icon="browser">
     ```
     Create a one-page personal website for an online for {person} with the following features and sections:
     
@@ -30,25 +30,25 @@ Devin needs guidance to make sure it knows what tasks to execute, and more impor
     ```
   </Accordion>
 
-  <Accordion title="Scrape emojis">
+  <Accordion title="Scrape emojis" icon="face-smile">
     ```
     Use this (https://github.com/muan/unicode-emoji-json) to write a function that converts a string like https://www.gstatic.com/android/keyboard/emojikitchen/20201001/u1f600/u1f600_u2615.png to "grinning_face_warm_beverage" by extracting the 2 emojis (u1f600, u2615) and converting them to actual emojis (use python for this) and then looking them up in the dictionary provided by the unicode emoji json library I linked. Throw an error if the emoji isn't found, including the codepoint in the error message. Then run the function on https://gist.githubusercontent.com/ryanseddon/0925ba915d4f865228ee3e6e0ddbe52c/raw/aa5cc2dbab3a9f3eaa1dc5d22dc1dc88d184dc4f/urls.txt and output a csv of the results.
     ```
   </Accordion>
 
-  <Accordion title="Write unit test">
+  <Accordion title="Write unit test" icon="magnifying-glass">
     ```
     Can you get https://github.com/markedjs/marked set up, use the command line tool with the --output/-o flag, then add a unit test to test the --output flag? There should already be similar tests in bin.test.js that you can add to.
     ```
   </Accordion>
 
-  <Accordion title="Visualize inflation adjusted prices">
+  <Accordion title="Visualize inflation adjusted prices" icon="chart-line">
     ```
     Hi Devin, please go to https://beta.data.gov.sg/ and visualize how the distribution of flat prices has been changing over time. Then report back with any interesting insights.
     ```
   </Accordion>
 
-  <Accordion title="Create architecture diagram for repository">
+  <Accordion title="Create architecture diagram for repository" icon="diagram-subtask">
     ```
     **Playbook**: Create an architectural diagram of source code or a public GitHub repository
     
