--- a/Learn_about_Devin/webapps.mdx
+++ b/Learn_about_Devin/webapps.mdx
@@ -16,33 +16,31 @@ icon: 'browser'
     Can you do some research about John von Neumann and then make a nice website about him?
     ```
   </Accordion>
-
   <Accordion title="Build a personal website - specific" icon="user">
     ```
     Create a one-page personal website for an online for {person} with the following features and sections:
-    
-    1. A fixed navigation bar with links to the sections (About Me, My Work, Publications, Education)
-    2. A hero section with an picture of the person
-    3. An "About Me" section with an brief description of the person
-    4. A "My Work" section with a timeline of work experiences and projects 
-    5. An interactive "Publications" section with links to published articles or papers available online authored by {person} 
-    6. An "Education" section with the schools {person} attended, degrees and graduating year
-    
-    Include filler placeholder content where you can't find publicly available information. Make the website pretty.
+Copy1. A fixed navigation bar with links to the sections (About Me, My Work, Publications, Education)
+2. A hero section with an picture of the person
+3. An "About Me" section with an brief description of the person
+4. A "My Work" section with a timeline of work experiences and projects 
+5. An interactive "Publications" section with links to published articles or papers available online authored by {person} 
+6. An "Education" section with the schools {person} attended, degrees and graduating year
+
+Include filler placeholder content where you can't find publicly available information. Make the website pretty.
+```
   </Accordion>
-  
   <Accordion title="Resume-builder web app" icon="file-user">
     ```
     Use react-pdf to make an interactive resume-builder web app; it should let the user fill out a form, and it'll show the pdf in real time. make sure the resulting resume looks good.
     ```
   </Accordion>
-
   <Accordion title="Devin's Party Page" icon="party-horn">
     ```
     Write a vanillajs web app that, when i click a button "Celebrate", makes confetti rain down the screen. call it "Devin's Party Page"
     ```
   </Accordion>
-  </AccordionGroup>
+</AccordionGroup>
+
 
 ### Example Sessions
 John von Neumann’s Personal Website https://preview.devin.ai/sessions/bbf51261833c461c9b5f332845ba7894
