--- a/Learn_about_Devin/webapps.mdx
+++ b/Learn_about_Devin/webapps.mdx
@@ -43,6 +43,11 @@ Include filler placeholder content where you can't find publicly available infor
 
 
 ### Example Sessions
-John von Neumann’s Personal Website https://preview.devin.ai/sessions/bbf51261833c461c9b5f332845ba7894
-Resume Builder Web App https://preview.devin.ai/sessions/c6de2e8405ab48cd8867eee9c7b77fdc 
+
+**John von Neumann’s Personal Website**
+<iframe src="https://preview.devin.ai/sessions/bbf51261833c461c9b5f332845ba7894"> </iframe>
+
+**Resume Builder Web App**
+<iframe src="https://preview.devin.ai/sessions/c6de2e8405ab48cd8867eee9c7b77fdc"> </iframe>
+
 
