--- a/Learn_about_Devin/webapps.mdx
+++ b/Learn_about_Devin/webapps.mdx
@@ -3,6 +3,8 @@ title: "Web Applications"
 icon: 'browser'
 ---
 
+Devin is a great prototyping and web app iteration partner. Here are some example prompts and sessions where Devin helps build web applications.
+
 ### Use it for… 
 1. Building simple MVPs of a product
 2. Working on existing web applications you’ve developed
