--- a/security.mdx
+++ b/security.mdx
@@ -6,6 +6,7 @@ icon: 'lock'
 
 ## Security
 
+<AccordionGroup>
 <Accordion title="Secure Transmission and Encryption">
 All data transmission is encrypted in transit and at rest. Production software is also routinely monitored via logging, error handling and monitoring dashboards of live metrics. Unusual application states (ie. unusually high error rates, slowness, failures) trigger alerts which are quickly investigated by our team. 
     
@@ -21,9 +22,11 @@ Cognition obtained SOC 2 Type I certification and conducted Security Training in
     
 You can request a copy of our SOC 2 Type I at security@cognition.ai.
 </Accordion>
+</AccordionGroup>
 
 ## Privacy & Intellectual Property
 
+<AccordionGroup>
 <Accordion title="How does Cognition use and process data run through and/or accessed by Devin?">
 Cognition  processes data based on the application Customers use to interact with Devin. Devin can be accessed via web application, Github or Slack integration. For the web application, Cognition only processes data actively provided by the authorized user prompting Devin; for the Github and Slack integrations, the administrator installing the integration can review and manage all permissions granted to Devin.
     
@@ -58,9 +61,11 @@ In Slack, Devin doesn’t read, process or store any data in your Slack instance
     
 For more details on the requested permissions and security considerations go to [Slack Integration Guide](https://www.notion.so/Slack-Integration-Guide-50c11122153d41f18e7bb31b40cf1fbd?pvs=21).
 </Accordion>
+</AccordionGroup>
 
 ## User Best Practices
 
+<AccordionGroup>
 <Accordion title="Devin Limitations">      
 While Devin’s performance is improving daily, it can still experience hallucinations, introduce bugs into code, or suggest insecure code or procedures. Like with any coding best practices, we recommend taking the appropriate precautions with the code written by Devin such as code reviews, enabling branch protections to ensure checks are enforced before Devin can merge any changes, and any practices currently adopted in your organization to review engineers’ work.
 </Accordion>
@@ -72,4 +77,4 @@ You may need to provide Devin with credentials and keys such as passwords, API k
 <Accordion title="Share Feedback">
 We’re still learning and developing Devin to be a great AI software engineer, and our Customers’ feedback is crucial for Devin’s development. We strongly encourage sharing feedback and feature requests directly with your Cognition account team or by emailing [support@cognition.ai](mailto:support@cognition.ai), and reporting incidents by emailing [security@cognition.ai](mailto:security@cognition.ai).
 </Accordion>
-    
+</AccordionGroup>
