--- a/Learn_about_Devin/refactors.mdx
+++ b/Learn_about_Devin/refactors.mdx
@@ -3,4 +3,13 @@ title: "Refactors"
 icon: 'code-compare'
 ---
 
+[intro]
 
+### Use it for…
+1. [placeholder]
+2. [placeholder]
+3. [placeholder]
+
+### Example Prompts
+
+### Example Sessions
