--- a/Learn_about_Devin/scraping.mdx
+++ b/Learn_about_Devin/scraping.mdx
@@ -3,5 +3,13 @@ title: "Web Scraping"
 icon: 'globe'
 ---
 
+[intro]
 
+### Use it for…
+1. [placeholder]
+2. [placeholder]
+3. [placeholder]
 
+### Example Prompts
+
+### Example Sessions
