--- a/Learn_about_Devin/upgrades.mdx
+++ b/Learn_about_Devin/upgrades.mdx
@@ -3,3 +3,13 @@ title: "Modernization & Upgrades"
 icon: 'circle-up'
 ---
 
+[intro]
+
+### Use it for…
+1. [placeholder]
+2. [placeholder]
+3. [placeholder]
+
+### Example Prompts
+
+### Example Sessions
