--- a/Learn_about_Devin/prompting.mdx
+++ b/Learn_about_Devin/prompting.mdx
@@ -7,6 +7,14 @@ icon: 'comment'
 Devin needs guidance to make sure it knows what tasks to execute, and more importantly, any preference in how it should execute those tasks. If not specified, Devin will make its own judgment calls. 
 
 #### Prompt Library
+**Devin self-hosts Redash**
+
+```
+please self host redash server, connect a local sqlite database. add some dummy data and create an example query & dashboard.
+```
+
+Link to the session: [Self-host redash server](https://preview.devin.ai/sessions/675a54a158024b35a0feb8a159ed8273)
+
 
 <AccordionGroup>
   <Accordion title="Clone and set up repo" icon="copy">
